Fri Dec 16 20:21:43 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - newhidups.8, mge-shut.8, mge-utalk.8, driver.list: various update
 - FAQ: update USB support information

Tue Dec  6 04:03:11 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - added Belkin F6C800-UNV to scripts/hotplug/libhid.usermap (thanks drew.kay)
 - added Belkin F6C1500-TW-RK to data/driver.list (thanks "Big Wave Dave")

Fri Nov 25 10:02:15 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - fentonups: correct the INELT Monolith 1000LT definition

   (Yuri V. Kurenkov)

Thu Nov 24 05:50:59 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - updated newhidups man page to reflect multi-unit capability

Tue Nov 15 17:35:00 CEST 2005 / Kjell Claesson <kjell.claesson@telia.com>

 * driver.list:
   - add HP R5500 XR compatibility with bcmxcp

Sat Nov 12 05:12:20 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups, mge-shut: rewrote HID parser interface to parse the
   Report Descriptor into a data structure, instead of re-scanning it
   as a byte array all the time.

Wed Nov  9 02:14:01 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: cleaned up dependencies on $(LIBUSB_CFLAGS)

Mon Nov  7 22:11:11 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added rudimentary Tripp Lite support, still incomplete
   and unstable.
 - newhidups: changed some local declarations to "static". 

Sun Nov 06 20:14:10 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - the state socket, used for the communication between the drivers
   and upsd, are now named using the upsname, as defined between brackets
   in ups.conf, by default. The same applies to drivers .pid file, now
   named using drivername-upsname. The old naming behavior is kept for
   debug purpose, allowing to start drivers only by specifying a port name.

Mon Oct 24 09:07:04 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>
