@@ -37,6 +37,10 @@ Optional.  Specify the UPS model name.
 
 Optional.  Specify the UPS serial number.
 
+.IP "lowbatt=\fIfloat\fR"
+
+Optional.  Low battery level (%). Overrides the hardware default level.
+
 .SH UPS COMMANDS
 
 This driver supports some extra commands (see \fBupscmd\fR(8)):
