@@ -1,3 +1,7 @@
+Tue Jan 33 02:09:27 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
+
+ - megatec: new "lowbatt" parameter (overrides the hardware low battery level)
+
 Fri Dec 16 20:21:43 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>
 
  - newhidups.8, mge-shut.8, mge-utalk.8, driver.list: various update
